--- a/blogpost.html
+++ b/blogpost.html
@@ -24,6 +24,9 @@
                 Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. 
                 Pero estadísticamente no lo eres... por ahora.
             </p>
+            <p>
+                Los blogs son la forma maestra de aprender porque compartes lo que has aprendido.
+            </p>
         </div>
     </div>
     
