--- a/blogpost.html
+++ b/blogpost.html
@@ -19,11 +19,11 @@
             <p>Y este es el párrafo de 
             inicio donde vamos a explicar 
             las cosas increíbles que se 
-            pueden hacer con ramas</p>
+            pueden hacer con ramas en Git y GitHub</p>
             <p>
                 Los blog son la mejor forma de compartir información y tus ideas.
                 Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. 
-                Pero estadísticamente no lo eres... por ahora.
+                Pero estadísticamente no lo eres por ahora.
             </p>
             <p>
                 Los blogs son la forma maestra de aprender porque compartes lo que has aprendido.
