Agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
             inicio donde vamos a explicar 
             las cosas incre&iacute;bles que se 
             pueden hacer con ramas en Git y GitHub</p>
+            <p><img src="imagenes/meetup.jpg" width="100%"/></p>
             <p>
                 Los blog son la mejor forma de compartir informaci&oacute;n y tus ideas.
                 Mucho m&aacute;s que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. 
